TruckRegion issues resolved, change in path and table constants, bug fixed in crsdata, aligned login, style changes done in home page and changes in style.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -1053,7 +1053,8 @@ box-shadow: 0 1px 4px #464141, 0 0 0 1px #949191;
   }
 
   .dashboard .colorbox .colorbox-name {
-    font-size: 16px;
+    font-size: 13px;
+    font-weight: bold;
     display: inline-block;
     width: 100%;
     color: #09143e;
@@ -1165,7 +1166,7 @@ ul
     color: whitesmoke;
     border-bottom-color: #18c5a9;
     background-color: #18c5a9;
-    border-radius: 5px;
+    border-radius: 30px 30px 0px 0px;
   }
 
     /*##(large)###*/
@@ -1387,4 +1388,20 @@ ul
             color: #FFFFFF;
             background: #2399e5;
             transition: background-color 0.2s;
+        }
+        .fontfamily{
+          font-family: sans-serif !important;
+        }
+        .col-md-12{
+          padding-right: 7px;
+          padding-left: 7px;
+        }
+        .nav-tabs{
+          border-bottom: 0px solid #dee2e6;
+        }
+        .nav-tabs{
+          margin-bottom: 7px;
+        }
+        .nav-fill .nav-item{
+          flex: 1 1;
         }
